# libjson-rpc-cpp

./: .cproject  .gitignore  .project  .travis.yml  ANNAX-Readme.txt  AUTHORS.md  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  Makefile.am  README.md  Readme.txt  appveyor.yml  codecov.yml  configure.ac  libjson-rpc-cpp.pc.cmake  libjsonrpccpp.spec.in  preconfigure.sh  revision-gen  sonar-project.properties
LibMicroHttpd/: AUTHORS  ChangeLog  MHD_config.h.in  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
LibMicroHttpd/contrib/: Makefile.in
LibMicroHttpd/doc/: Makefile.am  Makefile.in  libmicrohttpd-tutorial.info  libmicrohttpd-tutorial.texi  libmicrohttpd.3  libmicrohttpd.info  libmicrohttpd.texi  performance_data.eps  stamp-vti
LibMicroHttpd/doc/chapters/: hellobrowser.inc  processingpost.inc  sessions.inc  tlsauthentication.inc
LibMicroHttpd/doc/doxygen/: Makefile.in  libmicrohttpd.doxy
LibMicroHttpd/doc/examples/: Makefile.in  basicauthentication.c  hellobrowser.c  largepost.c  logging.c  responseheaders.c  sessions.c  simplepost.c  tlsauthentication.c
LibMicroHttpd/m4/: Makefile.in  ax_count_cpus.m4  libcurl.m4  libgcrypt.m4
LibMicroHttpd/src/: Makefile.am  Makefile.in
LibMicroHttpd/src/examples/: Makefile.am  Makefile.in  authorization_example.c  benchmark.c  benchmark_https.c  chunked_example.c  demo.c  demo_https.c  digest_auth_example.c  dual_stack_example.c  minimal_example.c  (+9 more)
example/: .cproject  .project  CMakeLists.txt  FooBar.h  MyStubName.h  main.cpp  simpleclient.cpp  simpleserver.cpp  simplestubclient.cpp  stubclient.cpp
example/res/: index.html  procedures.json
lib/json/: CMakeLists.txt  LICENSE
lib/jsonrpc/: CMakeLists.txt  LICENSE  abstractauthenticator.h  abstractrequesthandler.h  authenticationmanager.h  authenticator.h  client.cpp  client.h  clientconnector.cpp  clientconnector.h  errors.cpp  errors.h  exception.cpp  exception.h  procedure.cpp  procedure.h  requesthandler.cpp  requesthandler.h  rpc.h  rpcprotocolclient.cpp  rpcprotocolclient.h  rpcprotocolserver.cpp  rpcprotocolserver.h  server.cpp  server.h  serverconnector.cpp  serverconnector.h  specification.h  specificationparser.cpp  specificationparser.h  specificationwriter.cpp  specificationwriter.h
lib/mongoose/: CMakeLists.txt  mongoose.h
src/: CMakeLists.txt  Makefile.am  constants.h  exception.h  jsonparser.h  specification.h  version.h.in
src/_test/: testhttpserver.cpp  testhttpserver.h
src/catch/: CMakeLists.txt
src/client/: CMakeLists.txt  batchcall.h  batchresponse.h  client.cpp  client.h  jsonrpccpp-client.pc.in  mockclientconnector.cpp  mockclientconnector.h  rpcprotocolclient.cpp  rpcprotocolclient.h  test_client.cpp
src/connector/: CMakeLists.txt  abstractserverconnector.h  abstractserverconnector_test.cpp  iclientconnectionhandler.h  iclientconnector.h  test_clientconnectionhandler.h  test_clientconnector.h
src/example/: CMakeLists.txt  Makefile.am  XbmcRemoteClient.h  abstractmystubserver.h  mystubclient.h  simpleclient.cpp  simpleserver.cpp  spec.json  stubclient.cpp  stubserver.cpp  xbmc_remote.json  xbmcremote.cpp
src/examples/: CMakeLists.txt  README.md  beasthttpclient.cpp  beasthttpserver.cpp  filedescriptorclient.cpp  filedescriptorserver.cpp  index.html  redisclient.cpp  redisserver.cpp  serialportclient.cpp  serialportserver.cpp  simpleclient.cpp  simpleserver.cpp  spec.json  stubclient.cpp  stubserver.cpp  tcpsocketclient.cpp  tcpsocketserver.cpp  unixdomainsocketclient.cpp  unixdomainsocketserver.cpp  xbmc_remote.json  xbmcremote.cpp
src/jsonrpc/: CMakeLists.txt  client.cpp  client.h  clientconnector.cpp  clientconnector.h  errors.cpp  errors.h  exception.cpp  exception.h  procedure.cpp  procedure.h  rpc.h  rpcprotocolclient.cpp  rpcprotocolclient.h  rpcprotocolserver.cpp  rpcprotocolserver.h  server.h  serverconnector.cpp  specificationparser.cpp  specificationparser.h  specificationwriter.cpp  version.h.in
src/jsonrpccpp/: CMakeLists.txt  client.h  server.h  version.h.in
src/server/: CMakeLists.txt  abstractprotocolhandler.cpp  abstractprotocolhandler.h  abstractserver.h  errors.cpp  iprocedureinvokationhandler.h  jsonrpccpp-server.pc.in  procedure.cpp  requesthandlerfactory.cpp  requesthandlerfactory.h  rpcprotocolserver12.cpp  rpcprotocolserver12.h  rpcprotocolserverv1.cpp  rpcprotocolserverv1.h  rpcprotocolserverv2.cpp  rpcprotocolserverv2.h  test_mockclientconnectionhandler.cpp  test_mockclientconnectionhandler.h  test_mockserverconnector.cpp  test_mockserverconnector.h  test_server.cpp  test_serverapp.cpp  test_serverapp.h
src/stubgenerator/: CMakeLists.txt  FindArgtable.cmake  Makefile.am  app.cpp  app.h  clientstubgenerator.cpp  clientstubgenerator.h  clienttemplate.h  codegenerator.cpp  codegenerator.h  main.cpp  procedure.cpp  procedure.h  serverstubgenerator.cpp  servertemplate.h  specificationparser.cpp  specificationparser.h  streamreader.cpp  stubgenerator.cpp  stubgenerator.h  stubgeneratorfactory.cpp  stubgeneratorfactory.h  stubhelper.h
src/test/: CMakeLists.txt  Makefile.am  concurrency.cpp  errorhandling.cpp  helloworld.cpp  jsonrpcprotocol.cpp  main.cpp  mockclientconnectionhandler.cpp  mockclientconnectionhandler.h  mockclientconnector.cpp  mockclientconnector.h  mockserverconnector.cpp  mockserverconnector.h  parametervalidation.cpp  remotecalculator.cpp  remotecounter.cpp  server.cpp  server.h  specification.cpp  tcpconnector.cpp  test_client.cpp  test_common.cpp  test_connector_beasthttp.cpp  test_connector_filedescriptor.cpp  test_connector_http.cpp  test_connector_redis.cpp  test_connector_tcpsocket.cpp  test_connector_unixdomainsocket.cpp  test_connector_zeromq.cpp  test_connector_zmq.cpp  test_integration.cpp  test_server.cpp  test_stubgen.cpp  test_stubgenerator.cpp  testhttpserver.cpp  testhttpserver.h  testredisserver.cpp  testredisserver.h  testserver.cpp  testserver.h  (+1 more)
test/: CMakeLists.txt  errorhandling.cpp  helloworld.cpp  jsonrpcprotocol.cpp  procedures.json  remotecalculator.cpp  remotecounter.cpp  server.cpp  server.h  simpletest
(+341 files in other folders)
